--- a/css/style.css
+++ b/css/style.css
@@ -31,7 +31,7 @@ img {
 #header div {
 	margin: 0 auto;
     max-width: 940px;
-    min-height: 227px;
+    min-height: 150px;
     padding: 0 10px;
 }
 #header div a.logo {
@@ -47,7 +47,7 @@ img {
 	margin: 0;
 	padding: 0;
 	width: auto;
-	height: 200px;
+	height: 160px;
 }
 #header div ul {
 	display: block;
@@ -78,7 +78,7 @@ img {
 	width: auto;
 }
 #header div ul li.selected a, #header div ul li.selected a:hover {
-	color: #fb416f;
+	color: green;
 }
 #header div ul li a:hover {
 	color: #16ab88;
@@ -91,7 +91,7 @@ img {
 }
 /*----------------------------------------body-home-styles---------------------------------------*/
 #body {
-	background: url(../images/bg-home.png) no-repeat center top;
+	background: url(../images/background.jpeg) no-repeat center fixed;
 	border-top: 2px solid #252525;
 	margin: 0;
 	overflow: hidden;
@@ -135,8 +135,8 @@ img {
 	width: 37.4583%;
 }
 #body.home div.header div span a.email {
-	border: 5px solid #000000;
-	color: #000000;
+	border: 5px solid white;
+	color: white;
 	display: block;
 	float: left;
 	font-family: Arial;
@@ -151,9 +151,9 @@ img {
 	width: 63.142857142857%;
 }
 #body.home div.header div span a.signup {
-	border: 5px solid #000000;
+	border: 5px solid white;
 	border-left: none;
-	color: #000000;
+	color: white;
 	display: block;
 	float: left;
 	font-family: Arial;
@@ -174,7 +174,7 @@ img {
 	width: 97.9167%;
 }
 #body.home div.body {
-	background-color: #7830EC;
+	background-color: #000;
 	opacity: 0.9;
 	margin: 0;
 	padding: 0;
@@ -223,7 +223,7 @@ img {
 	text-decoration: underline;
 }
 #body.home div.body div p a:hover {
-	color: #fc416f;
+	color: #228B22;
 }
 #body.home div.body div a.more {
 	border: 5px solid #FFFFFF;
@@ -257,7 +257,7 @@ img {
 }
 #body div h1 {
 	background: url(../images/bg-border2.gif) no-repeat center bottom;
-	color: #FC416F;
+	color: #228B22;
 	font-family: 'Arial Black';
 	font-size: 40px;
 	font-weight: normal;
@@ -331,7 +331,7 @@ img {
 	text-decoration: underline;
 }
 #body div p a:hover {
-	color: #fc416f;
+	color: #228B22;
 }
 #body div h2 {
 	color: #FFFFFF;
@@ -467,7 +467,7 @@ img {
 	text-decoration: underline;
 }
 #body div ul li div p a:hover {
-	color: #fc416f;
+	color: #228B22;
 }
 #body div ul li div a.more {
 	border: 2px solid #FFFFFF;
@@ -486,7 +486,7 @@ img {
 	width: 136px;
 }
 #body div ul li div a.more:hover {
-	background-color: #fc416f;
+	background-color: #228B22;
 	border: none;
 	height: 38px;
 	line-height: 38px;
@@ -527,7 +527,7 @@ img {
 	text-decoration: underline;
 }
 #body.contact div p a:hover {
-	color: #fc416f;
+	color: #228B22;
 }
 #body.contact div h4 {
 	background: url(../images/bg-border1.gif) no-repeat center bottom;
@@ -600,7 +600,7 @@ img {
 	width: 143px;
 }
 #body.contact div form input#submit:hover {
-	background-color: #fb416f;
+	background-color: #228B22;
 	border: none;
 	height: 43px;
 	width: 143px;
@@ -656,7 +656,7 @@ img {
 	text-decoration: underline;
 }
 #body.blogsinglepost div div p a:hover {
-	color: #fc416f;
+	color: #228B22;
 }
 /*----------------------------------------footer-styles---------------------------------------*/
 #footer {
